tests/paczka1/fuzzy1/95790104.err
Error in line 7: ù737 A112 222,9
Error in line 8: 2ClXJJXc S737 47,0
Error in line 2: S737 A112 70,1
Error in line 6: nWyjZ0D A112 88,1
Error in line 18: S737 S528 93,4
Error in line 22: WDKN S737 12,8
Error in line 24: WDKN S358 37,1
